--- a/brun17comcom.tex
+++ b/brun17comcom.tex
@@ -45,7 +45,7 @@
 
 \date{}
 
-\title{(Not so) Intuitive Results from two Real-World\\Low-Power Wireless Mesh Deployments}
+\title{Smart Agriculture and Smart Building Low-Power Wireless SmartMesh Deployments: It Just Works!}
 
 \author[inria]{Keoma~Brun-Laguna}
     \ead{keoma.brun@inria.fr}
@@ -59,20 +59,17 @@
 \address[inria]{Inria, EVA team, Paris, France}
 \address[uoc]{Univ. Oberta de Catalunya, Barcelona, Catalonia, Spain}
 
-
-
 \begin{abstract}
-Two wireless network sensors are deployed.
-One in a peach orchard and one in an office building.
-The two networks are collecting sensor values and network statistics.
-This paper presents an in-depth analysis of the statistics, in order to precisely understand the performance of the networks.
+Two low-power wireless networks of sensors deployed, one in a peach orchard, one in an office building.
+Both network use SmartMesh technology to gather sensor values and network statistics, and connect to a back-end system.
+This paper presents an in-depth analysis of the performance of the network.
 Nodes in the networks exhibit an expected lifetime between 4 and 8~years, with an end-to-end reliability of 100\%.
 We show how -- contrary to popular belief -- wireless links are symmetric.
 Thanks to the use of Time Slotted Channel Hopping (TSCH), the network topology is very stable, with $\leq$15 link changes on average per day in the entire network.
 \end{abstract}
 
 \begin{keyword}
-    WSN, SmartAgriculture, SmartBuilding
+    Low-power wireless, SmartMesh, Smart Agriculture, Smart Building
 \end{keyword}
 
 \end{frontmatter}
@@ -82,7 +79,7 @@ Thanks to the use of Time Slotted Channel Hopping (TSCH), the network topology i
 %======== front-page figure, do not move
 \begin{figure}
     \centering
-    \includegraphics[width=0.8\textwidth]{orchard}
+    \includegraphics[width=0.80\textwidth]{orchard}
     \caption{Areal view of the sensor network deployed in the orchard near Mendoza, Argentina.}
     \label{fig:orchard}
 \end{figure}
