--- a/brun17comcom.tex
+++ b/brun17comcom.tex
@@ -56,20 +56,21 @@
 \author[inria]{Thomas~Watteyne}
     \ead{thomas.watteyne@inria.fr}
 
-\address[inria]{Inria, EVA team, Paris, France}
-\address[uoc]{Univ. Oberta de Catalunya, Barcelona, Catalonia, Spain}
+\address[inria]{~Inria, EVA team, Paris, France}
+\address[uoc]{~Univ. Oberta de Catalunya, Barcelona, Catalonia, Spain}
 
 \begin{abstract}
-Two low-power wireless networks of sensors deployed, one in a peach orchard, one in an office building.
-Both network use SmartMesh technology to gather sensor values and network statistics, and connect to a back-end system.
-This paper presents an in-depth analysis of the performance of the network.
-Nodes in the networks exhibit an expected lifetime between 4 and 8~years, with an end-to-end reliability of 100\%.
+We deployed two low-power wireless networks, one in a peach orchard, one in an office building.
+Both networks use SmartMesh technology to gather sensor values and network statistics, and connect to a back-end system.
+This paper presents an in-depth analysis of the performance of the technology in both use cases, and compares them.
+Nodes in both networks exhibit an expected lifetime between 4 and 8~years, with an end-to-end reliability of 100\%.
 We show how -- contrary to popular belief -- wireless links are symmetric.
 Thanks to the use of Time Slotted Channel Hopping (TSCH), the network topology is very stable, with $\leq$15 link changes on average per day in the entire network.
+We conclude that SmartMesh technology is perfectly applicable for the Smart Agriculture and Smart Building domains.
 \end{abstract}
 
 \begin{keyword}
-    Low-power wireless, SmartMesh, Smart Agriculture, Smart Building
+Low-power wireless, SmartMesh, Smart Agriculture, Smart Building.
 \end{keyword}
 
 \end{frontmatter}
@@ -80,7 +81,7 @@ Thanks to the use of Time Slotted Channel Hopping (TSCH), the network topology i
 \begin{figure}
     \centering
     \includegraphics[width=0.80\textwidth]{orchard}
-    \caption{Areal view of the sensor network deployed in the orchard near Mendoza, Argentina.}
+    \caption{Areal view of the sensor network deployed in an orchard near Mendoza, Argentina.}
     \label{fig:orchard}
 \end{figure}
 
@@ -91,7 +92,7 @@ Thanks to the use of Time Slotted Channel Hopping (TSCH), the network topology i
 
 Peaches do not like frost.
 If during the blooming season (September in Argentina), temperature gets below $-$3~C for only a couple of hours, the flowers freeze, and no peaches are produced.
-In 2013, 85\% of the peach production in the Mendoza region (western Argentina) was lost because of frost events.
+In 2013, 85\% of the peach production in the Mendoza region (Western Argentina) was lost because of frost events.
 Farmers can lose everything in only a couple of hours.
 Yet, if they are warned of a frost event a couple of hours ahead, they can install heaters throughout the orchards, and use big fans to move the hot air around.
 Fighting the frost events is not the issue, what is hard is predicting it.
