--- a/brun17comcom.tex
+++ b/brun17comcom.tex
@@ -279,10 +279,10 @@ As a side effect, this allows us to verify the network formation and joining pro
 
 Previous publications~\cite{watteyne16peach,watteyne10mitigating,watteyne09reliability,watteyne15industrial} underline the performance of TSCH networks in general, and \smip in particular.
 Standardization work in the IETF 6TiSCH working group\footnote{~\url{https://tools.ietf.org/wg/6tisch/charters}} around TSCH networks further illustrates the move of the industry towards this type of networking technology.
-So while we expect good performance from the network, this section verifies that this is indeed the case.
+While we generally expect good performance from the network, this section verifies that this is the case, on the commercial \smip implementation.
 We start by looking at two physical-layer metrics: RSSI vs Distance (Section~\ref{sec:rssi_distance}) and PDR vs. RSSI (Section~\ref{sec:waterfall}).
 While these have no dependency on TSCH (the type of medium access), they allow us to verify the overall connectivity in the network.
-We then look at key performance indicators of \smip networks: end-to-end reliability (Section~\ref{sec:net_reliability}) and network lifetime (Section~\ref{sec:lifetime}).
+We then look at key performance indicators: end-to-end reliability (Section~\ref{sec:net_reliability}) and network lifetime (Section~\ref{sec:lifetime}).
 
 %------------------------------------------------------------------------------
 \subsection{RSSI vs. Distance}
