#1 adding smartbuilding pictures

--- a/brun17comcom.tex
+++ b/brun17comcom.tex
@@ -100,6 +100,24 @@ Fighting the frost events is not the issue, what is hard is predicting it.
     \label{fig:orchard}
 \end{figure}
 
+\begin{figure}
+    \hfill
+    \begin{minipage}[t]{0.48\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{smartbuilding_outdoor}
+        \caption{The wireless motes deployed in the Inria office building outdoor, France.\newline}
+        \label{fig:peach_map}
+    \end{minipage}
+    \hfill
+    \begin{minipage}[t]{0.48\textwidth}
+        \includegraphics[width=\textwidth]{smartbuilding_indoor}
+        \caption{The wireless motes deployed in the Inria office building indoor, France.}
+        \label{fig:evalab_map}
+    \end{minipage}
+    \hfill
+\end{figure}
+
+
 % agri: project
 
 The goal of the \agri deployment (part of the PEACH project~\cite{watteyne16peach}) is to predict frost events in a peach orchard.
