--- a/brun17comcom.tex
+++ b/brun17comcom.tex
@@ -52,6 +52,12 @@
 
 \author[inria]{Keoma~Brun-Laguna}
     \ead{keoma.brun@inria.fr}
+\author[utn]{Ana~Laura~Diedrichs}
+    \ead{ana.diedrichs@frm.utn.edu.ar}
+\author[udp]{Diego~Dujovne}
+    \ead{diego.dujovne@mail.udp.cl}
+\author[utn]{Carlos~Taffernaberry}
+    \ead{cartaffe@frm.utn.edu.ar}
 \author[inria]{R\'emy~L\'eone}
     \ead{remy.leone@inria.fr}
 \author[uoc]{Xavier~Vilajosana}
@@ -60,6 +66,8 @@
     \ead{thomas.watteyne@inria.fr}
 
 \address[inria]{~Inria, EVA team, Paris, France}
+\address[utn]{~Univ. Tecnológica Nacional (UTN), Mendoza, Argentina}
+\address[udp]{~Univ. Diego Portales, Santiago, Chile}
 \address[uoc]{~Univ. Oberta de Catalunya, Barcelona, Catalonia, Spain}
 
 \begin{abstract}
