--- a/brun17comcom.tex
+++ b/brun17comcom.tex
@@ -351,9 +351,16 @@ Fig.~\ref{fig:waterfall} plots the PDR and the RSSI of these 69,643 and 93,135 m
 For readability, we also plot the average/deviation of the data for a given RSSI value.
 Because of its shape, this is known as the ``waterfall plot''.
 
-\begin{figure}
-    \includegraphics[width=0.5\columnwidth]{waterfall_peach.eps}
-    \includegraphics[width=0.5\columnwidth]{waterfall.eps}
+\begin{figure}[h]
+    \centering
+    \begin{subfigure}[h]{0.49\textwidth}
+        \includegraphics[width=\columnwidth]{waterfall_agri.eps}
+        \caption{\agri}
+     \end{subfigure}
+     \begin{subfigure}[h]{0.49\textwidth} 
+        \includegraphics[width=\columnwidth]{waterfall_building.eps}
+        \caption{\building}
+    \end{subfigure}
     \caption{
         The PDR/RSSI ``waterfall'' plot.
         The \building plot is shifted right compared to the \agri plot, indicating an environment where external interference is present.
