#5 fixed, updated 802.15.4 ref

--- a/brun17comcom.tex
+++ b/brun17comcom.tex
@@ -519,7 +519,7 @@ In Section~\ref{sec:net_stability}, we show that, through the use of TSCH, the l
 % what is reported
 
 Motes report the average RSSI value of the packets received from each neighbor in their \HRNEIGHBORS health reports.
-Because the network uses channel hopping, these reported RSSI values are also averaged over 15~IEEE802.15.4 frequencies~\cite{std_ieee802154_2011}.
+Because the network uses channel hopping, these reported RSSI values are also averaged over 15~IEEE802.15.4 frequencies~\cite{std_ieee802154_2015}.
 In this section, we use the term ``RSSI'' to denote the average RSSI over 15 frequencies.
 
 % what is asymmetry
@@ -640,14 +640,13 @@ We conclude that \smip technology is perfectly suitable for \agri and \building 
 
 \begin{thebibliography}{10}
 
-\bibitem{std_ieee802154_2011}
-{802.15.4-2011: IEEE Standard for Local and metropolitan area networks. Part
-  15.4: Low-Rate Wireless Personal Area Networks (LR-WPANs)}, 5 September 2011.
+\bibitem{std_ieee802154_2015}
+{802.15.4-2015: IEEE Standard for Low-Rate Wireless Networks}, April 2016 .
 
 \bibitem{std_ieee802154e_2012}
 {802.15.4e-2012: IEEE Standard for Local and metropolitan area networks--Part
   15.4: Low-Rate Wireless Personal Area Networks (LR-WPANs) Amendment 1: MAC
-  sublayer}, 16 April 2012.
+  sublayer}, April 2012.
 
 \bibitem{rfc3626}
 T.~H. Clausen and P.~Jacquet.
