--- a/brun17comcom.tex
+++ b/brun17comcom.tex
@@ -537,11 +537,18 @@ For each of those links, we compute the difference between average RSSI in each 
 Results are presented in Fig.~\ref{fig:tab_symmetry}.
 
 \begin{figure}
-    \includegraphics[width=0.5\columnwidth]{asymmetry_peach.eps}
-    \includegraphics[width=0.5\columnwidth]{asymmetry.eps}
+    \centering
+    \begin{subfigure}[h]{0.49\textwidth}
+        \includegraphics[width=\columnwidth]{asymmetry_agri.eps}
+        \caption{\agri}
+    \end{subfigure}
+    \centering
+    \begin{subfigure}[h]{0.49\textwidth}
+         \includegraphics[width=\columnwidth]{asymmetry_building.eps}
+        \caption{\agri}
+    \end{subfigure}
     \caption{
-        The difference in RSSI between the two directions of 7/12~wireless links.
-        \thomas{what does 7/12 mean?}
+        The difference in RSSI between the two directions of the wireless links with the highest number of exchanged messages.
         The violin plots show the distribution of the value and the standard deviation.
     }
     \label{fig:tab_symmetry}
