fixing thomas comments

--- a/brun17comcom.tex
+++ b/brun17comcom.tex
@@ -74,7 +74,7 @@
 We deploy two low-power wireless networks, one in a \agri setting (a peach orchard), one in a \building.
 Both networks use out-of-the-box \smip technology to gather sensor values, as well as extensive network statistics.
 This article presents an in-depth analysis of the performance of both networks, and compares them.
-Nodes in both exhibit end-to-end reliability of 100\%, with an expected lifetime between 4 and 8~years.\thomas{above?}
+Nodes in both exhibit end-to-end reliability of 100\%, with an expected lifetime between 4 and 8~years.
 We show how -- contrary to popular belief -- wireless links are symmetric.
 Thanks to the use of Time Slotted Channel Hopping (TSCH), the network topology is very stable, with $\leq$15 link changes on average per day in the entire network.
 We conclude that \smip technology is perfectly applicable for  and \building applications.
@@ -530,7 +530,7 @@ Numerous routing protocols (often standardized~\cite{rfc3626}) reuse that assump
 
 % what we measure
 
-We look at the link statistics between 18 June 2016 and 4 July 2016 (16 days) in the \agri deployment, and between the 12th of N.\thomas{missing}
+We look at the link statistics between 18 June 2016 and 4 July 2016 (16 days) in the \agri deployment, and between the 12th of November and the 7th of February in the \building deployment.
 The sample contains 411,132 \HRNEIGHBORS messages received from 14~DC9003 nodes (same hardware).
 During that period, 21~links are active with at least 250~transmissions for each link.
 For each of those links, we compute the difference between average RSSI in each directions.
